# tentserv-agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
python/tentgent-daemon/: README.md  pyproject.toml
python/tentgent-daemon/src/tentgent_daemon/: __init__.py
python/tentgent-daemon/src/tentgent_daemon/backends/: __init__.py  base.py  diffusers.py  llama_cpp.py  mlx.py  mlx_audio.py  mlx_diffusion.py  mlx_vlm.py  transformers_peft.py
python/tentgent-daemon/src/tentgent_daemon/cli/: __init__.py  audio_speech.py  audio_transcribe.py  chat_once.py  dataset_eval.py  dataset_synth.py  embed_once.py  image_generate_once.py  rerank_once.py  server.py  train_lora_run.py  video_understanding.py  vision_chat_once.py
python/tentgent-daemon/src/tentgent_daemon/datasets/: __init__.py  eval.py  provider.py  render.py  schema.py  synth.py
python/tentgent-daemon/src/tentgent_daemon/providers/: __init__.py  chat.py
python/tentgent-daemon/src/tentgent_daemon/runtime/: __init__.py  adapters.py  audio.py  audio_speech.py  capabilities.py  chat.py  embedding.py  image_generation.py  profile_deps.py  records.py  rerank.py  router.py  video_understanding.py  vision.py
python/tentgent-daemon/src/tentgent_daemon/server/: __init__.py  chat_api.py  config.py  embedding_api.py  health.py  http.py  rerank_api.py  session.py  sse.py
python/tentgent-daemon/src/tentgent_daemon/tools/: __init__.py  hf_snapshot.py
python/tentgent-daemon/src/tentgent_daemon/training/: __init__.py  events.py  mlx_lora.py  peft_data.py  peft_loop.py  peft_lora.py  skeleton.py
python/tentgent-daemon/tests/: test_audio_speech.py  test_audio_transcription.py  test_cloud_runtime_session.py  test_dataset_eval.py  test_dataset_provider.py  test_dataset_render.py  test_dataset_synth.py  test_hf_snapshot.py  test_image_generation.py  test_provider_chat.py  test_runtime_router.py  test_runtime_session_streaming.py  test_server_http.py  test_video_understanding.py  test_vision_chat.py
python/tentgent-model-runtime/: pyproject.toml
python/tentgent-model-runtime/src/tentgent/runtime/: __init__.py
python/tentgent-model-runtime/tests/: test_lora_tuning.py  test_server_bound_models.py  test_video_understanding.py
src/tentgent-cli/: Cargo.toml  README.md
src/tentgent-cli/src/: main.rs
src/tentgent-cli/src/cli/: adapter.rs  adapter_list.rs  adapter_progress.rs  adapter_render.rs  app.rs  auth.rs  chat.rs  daemon.rs  dataset.rs  display.rs  doctor.rs  embed.rs  image.rs  mod.rs  model.rs  model_support.rs  python_runtime.rs  rerank.rs  runtime.rs  runtime_footprint.rs  server.rs  session.rs  session_kernel.rs  speak.rs  status.rs  store.rs  train.rs  transcribe.rs  video.rs  vision.rs
src/tentgent-cli/src/cli/commands/: adapter.rs  auth.rs  chat.rs  daemon.rs  dataset.rs  embed.rs  image.rs  mod.rs  model.rs  rerank.rs  runtime.rs  server.rs  session.rs  speak.rs  store.rs  train.rs  transcribe.rs  video.rs  vision.rs
src/tentgent-cli/src/cli/train/: interactive.rs  render.rs  run.rs  run_render.rs  run_summary.rs
src/tentgent-cli/src/cli/tui/: app.rs  chat.rs  chat_render.rs  daemon_client.rs  jobs.rs  mod.rs  navigator.rs  render.rs  resource.rs  resource_render.rs  resource_tests.rs  runtime_action.rs  runtime_action_render.rs  runtime_wizard.rs  session_action.rs  store_action.rs  store_action_render.rs  terminal.rs
src/tentgent-core/: Cargo.toml
src/tentgent-core/src/: config.rs  dataset_runtime.rs  doctor.rs  lib.rs  platform.rs  runtime_assets.rs  server_runtime.rs
src/tentgent-core/src/adapter/: error.rs  hash.rs  index.rs  manifest.rs  mod.rs  service.rs  store.rs
src/tentgent-core/src/auth/: env.rs  error.rs  keychain.rs  mod.rs  provider.rs  service.rs  validate.rs
src/tentgent-core/src/daemon/: error.rs  mod.rs  service.rs  store.rs
src/tentgent-core/src/dataset/: diff.rs  error.rs  index.rs  manifest.rs  mod.rs  package.rs  service.rs  store.rs  template.rs  validate.rs
src/tentgent-core/src/model/: error.rs  format.rs  index.rs  manifest.rs  mod.rs  service.rs  store.rs
src/tentgent-core/src/server/: error.rs  mod.rs  service.rs  store.rs
src/tentgent-core/src/session/: error.rs  mod.rs  service.rs  store.rs
src/tentgent-core/src/train/: builder.rs  config.rs  defaults.rs  error.rs  hash.rs  lora.rs  mod.rs  overrides.rs  recipe.rs  records.rs  run.rs  store.rs
src/tentgent-daemon/: Cargo.toml
src/tentgent-daemon/src/: cloud_server.rs  lib.rs  local_server.rs  main.rs  provider_compat.rs  time.rs
src/tentgent-daemon/src/app/: mod.rs  services.rs  state.rs
src/tentgent-daemon/src/bootstrap/: config.rs  logging.rs  mod.rs
src/tentgent-daemon/src/handlers/: mod.rs  model.rs
src/tentgent-daemon/src/handlers/rest/: health.rs  mod.rs  status.rs  store_jobs.rs  video.rs
src/tentgent-daemon/src/kernel/: adapter.rs  auth.rs  capability.rs  dataset.rs  doctor.rs  mod.rs  model.rs  runtime.rs  server.rs  session.rs  tests.rs  train.rs
src/tentgent-daemon/src/runtime/: cache.rs  jobs.rs  mod.rs  scheduler.rs
src/tentgent-daemon/src/runtime/jobs/: inflight.rs  mod.rs  registry.rs  runner.rs  store.rs  types.rs
src/tentgent-daemon/src/server/cloud/: claude_messages.rs  embeddings.rs  error.rs  gemini_generate.rs  images.rs  mod.rs  native_chat.rs  (+3 more)
src/tentgent-daemon/src/transport/: rest.rs
src/tentgent-http/: Cargo.toml
src/tentgent-http/src/: app.rs  dto.rs  http.rs  jobs.rs  lib.rs  main.rs  response.rs  security.rs  server_runtime.rs
src/tentgent-http/src/routes/: auth.rs  chat.rs  daemon_control.rs  dataset_cloud.rs  dataset_tools.rs  diagnostics.rs  doctor.rs  jobs.rs  lifecycle.rs  mod.rs  openai.rs  session.rs  status.rs  store.rs  store_mutation.rs  tests.rs  train.rs
src/tentgent-kernel/: Cargo.toml
src/tentgent-kernel/src/: lib.rs
src/tentgent-kernel/src/capabilities/: domain.rs  manifest.rs  mod.rs  ports.rs  probes.rs  service.rs  store.rs  tests.rs
src/tentgent-kernel/src/features/: mod.rs
src/tentgent-kernel/src/foundation/: error.rs  mod.rs
src/tentgent-kernel/tests/: macos_keychain_prompt_probe.rs
(+695 files in other folders)
