[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tentgent-daemon"
version = "0.1.1"
description = "Python runtime and daemon layer for Tentgent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gguf",
    "huggingface-hub",
    "llama-cpp-python; sys_platform != 'win32'",
    "mlx; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "peft",
    "safetensors",
    "torch",
    "transformers",
]

[project.scripts]
tentgent-chat-once = "tentgent_daemon.cli.chat_once:main"
tentgent-dataset-eval = "tentgent_daemon.cli.dataset_eval:main"
tentgent-dataset-synth = "tentgent_daemon.cli.dataset_synth:main"
tentgent-server = "tentgent_daemon.cli.server:main"
tentgent-train-lora-run = "tentgent_daemon.cli.train_lora_run:main"
tentgent-hf-snapshot = "tentgent_daemon.tools.hf_snapshot:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/tentgent_daemon"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
