[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tentgent-daemon"
version = "0.1.2"
description = "Python runtime and daemon layer for Tentgent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gguf",
    "huggingface-hub",
    "safetensors",
]

[project.optional-dependencies]
local-model = [
    "accelerate",
    "diffusers",
    "llama-cpp-python; sys_platform != 'win32'",
    "mlx; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-vlm; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "peft",
    "pillow",
    "safetensors",
    "torch",
    "torchvision",
    "transformers",
]
training = [
    "peft",
    "safetensors",
    "torch",
    "transformers",
]

[project.scripts]
tentgent-audio-transcribe = "tentgent_daemon.cli.audio_transcribe:main"
tentgent-chat-once = "tentgent_daemon.cli.chat_once:main"
tentgent-dataset-eval = "tentgent_daemon.cli.dataset_eval:main"
tentgent-dataset-synth = "tentgent_daemon.cli.dataset_synth:main"
tentgent-embed-once = "tentgent_daemon.cli.embed_once:main"
tentgent-rerank-once = "tentgent_daemon.cli.rerank_once:main"
tentgent-server = "tentgent_daemon.cli.server:main"
tentgent-train-lora-run = "tentgent_daemon.cli.train_lora_run:main"
tentgent-vision-chat-once = "tentgent_daemon.cli.vision_chat_once:main"
tentgent-hf-snapshot = "tentgent_daemon.tools.hf_snapshot:main"
tentgent-image-generate-once = "tentgent_daemon.cli.image_generate_once:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/tentgent_daemon"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
