[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "tentgent-model-runtime"
version = "0.1.0"
description = "Python model runtime workspace for Tentgent."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
]

[project.optional-dependencies]
mlx = [
    "mlx; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
llama-cpp = [
    "llama-cpp-python",
]
transformers = [
    "accelerate",
    "num2words>=0.5.14",
    "peft",
    "safetensors",
    "torch",
    "transformers",
]
audio = [
    "accelerate",
    "misaki[en]>=0.9.4",
    "mlx-audio; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "num2words>=0.5.14",
    "torch",
    "transformers",
]
image = [
    "accelerate",
    "diffusers",
    "mflux; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "peft",
    "pillow",
    "safetensors",
    "torch",
    "torchvision",
    "transformers",
]
local-model = [
    "accelerate",
    "diffusers",
    "llama-cpp-python",
    "misaki[en]>=0.9.4",
    "mflux; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-audio; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "num2words>=0.5.14",
    "peft",
    "pillow",
    "safetensors",
    "torch",
    "torchvision",
    "transformers",
]

[project.scripts]
tentgent-model-runtime-server = "tentgent.runtime.cli.server:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/tentgent"]
