[package]
name = "tentgent-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tentgent"
path = "src/main.rs"

[dependencies]
clap.workspace = true
comfy-table.workspace = true
console.workspace = true
indicatif.workspace = true
miette.workspace = true
rpassword.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tentgent-core = { path = "../tentgent-core" }
tentgent-http = { path = "../tentgent-http" }
