[package]
name = "tentgent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
directories.workspace = true
dotenvy.workspace = true
hex.workspace = true
keyring.workspace = true
miette.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true
