[package]
name = "tentgent-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tentgent-daemon"
path = "src/main.rs"

[dependencies]
clap.workspace = true
miette.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tentgent-kernel = { path = "../tentgent-kernel" }
