[package]
name = "tentgent-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tentgent-daemon"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64 = "0.22"
clap.workspace = true
futures-util.workspace = true
miette.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tentgent-kernel = { path = "../tentgent-kernel" }
tower-http.workspace = true

[dev-dependencies]
tower.workspace = true
