[package]
name = "tentgent-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tentgent-http"
path = "src/main.rs"

[dependencies]
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tentgent-core = { path = "../tentgent-core" }
