[package]
name = "tentgent-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tentgent-http"
path = "src/main.rs"

[dependencies]
clap.workspace = true
miette.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tentgent-core = { path = "../tentgent-core" }
