[package]
name = "tentgent-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
directories.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
