[package]
name = "tentgent-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
directories.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-sync-persistent"] }

[dev-dependencies]
tokio.workspace = true
